[package]
name = "aptos-da-client"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = "1.0.86"
aptos-sdk = { workspace = true }
async-trait = { workspace = true }
c-kzg = { workspace = true }
color-eyre = { workspace = true }
da-client-interface = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }

[dev-dependencies]
aptos-testcontainer = { workspace = true }
