[package]
name = "aptos-da-client"
version.workspace = true
edition.workspace = true

[dependencies]
color-eyre = "0.6.3"
dotenv = "0.15.0"
c-kzg = "1.0.2"
url = "2.5.0"

serde = { workspace = true }
da-client-interface = { workspace = true }
async-trait = { workspace = true}
utils = { workspace = true }
aptos-sdk = { workspace = true }

