[package]
name = "aptos-settlement-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "68952c0" }
aptos-sdk = { workspace = true }
async-trait = { workspace = true }
color-eyre = { workspace = true }
mockall = { workspace = true }
once_cell = "1.19.0"
settlement-client-interface = { workspace = true }
url = "2.5.2"
utils = { workspace = true }
