[package]
name = "aptos-settlement-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = "1.0.86"
aptos-sdk = { workspace = true }
aptos-testcontainer = { workspace = true }
async-trait = { workspace = true }
color-eyre = { workspace = true }
c-kzg = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
once_cell = { workspace = true }
settlement-client-interface = { workspace = true }
tokio = { workspace = true }
utils = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
