[package]
name = "aptos-settlement-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
aptos-sdk = { workspace = true }
async-trait = { workspace = true }
c-kzg = { workspace = true }
color-eyre = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
settlement-client-interface = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utils = { workspace = true }
