[package]
name = "aptos-settlement-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
settlement-client-interface = { workspace = true }
async-trait = { workspace = true }
utils = { workspace = true }
aptos-sdk = { workspace = true }
color-eyre = { workspace = true }
starknet = { workspace = true }
mockall = { workspace = true }